# stara-batch-benchmark

./: .gitignore  generate_samples.sh  mazes.pkl  pyproject.toml  run_benchmarks.sh
batch_mazes/: benchmark.py  cli.py  generator.py
