[tool.poetry]
name = "batch-mazes"
version = "0.1.0"
description = ""
authors = ["Valerius Mattfeld <mail@valerius.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.3"
tqdm = "^4.67.1"
stara-maze-generator = { git = "https://github.com/valerius21/Stara-Maze-Generator.git", branch = "numpy-2.1.3" }
stara-astar = { git = "https://github.com/valerius21/stara_astar_naive.git", branch = "main" }                    # stara-astar-naive uses numpy 2.1.3
stara-astar-nuitka = { git = "https://github.com/valerius21/stara_astar_nuitka.git", branch = "numpy-2.1.3" }
stara-rs = "^0.1.0"
stara-astar-numba = { git = "https://github.com/valerius21/stara_astar_numba.git" }

[tool.poetry.scripts]
batch-mazes = "batch_mazes.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
